# fugue-ghidra

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.gradle  extension.properties
.github/workflows/: build.yml
extra/: fugue_db.capnp
ghidra_scripts/: FugueAnalysisOptions.java  FugueExport.java  NiobeNDBAnalysisOptions.java  NiobeNDBExport.java
rust/: lib.rs
src/main/java/fugue/schema/: Architecture.java  BasicBlock.java  Function.java  InterRef.java  IntraRef.java  Metadata.java  Project.java  Segment.java
src/main/java/fugue/serialise/: ArchBuilder.java  DatabaseBuilder.java  DatabaseImpl.java
src/main/java/niobe/flirt/: Flirt.java  FlirtByteBuffer.java  FlirtCrc16.java  FlirtFile.java  FlirtFunction.java  FlirtHeader.java  FlirtModule.java  FlirtNode.java  FlirtParseResult.java  FlirtRefPass.java  FlirtTailByte.java
src/main/java/niobe/serialise/: ArchBuilder.java  Database.java  DatabaseBuilder.java
tests/: import.py  true
