[package]
name = "fugue-ghidra"
version = "0.2.0"
authors = ["Sam Thomas <st@xv.ax>, Zitai Chen <zitaichen@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[lib]
path = "rust/lib.rs"

[dependencies]
fugue-db = { version = "0.2" }
thiserror = "1"
tempfile = "3.13"
which = "7"
whoami = "1.5"
url = "2.5"
